--- a/website/app/assets/js/angular/README.org
+++ b/website/app/assets/js/angular/README.org
@@ -17,3 +17,7 @@
     [[https://github.com/huei90/angular-validation]]
     version unknown
     files: angular-validation.js, vangular-validation-rule.js
+*** nsPopover
+    [[https://github.com/nohros/nsPopover]]
+    version: 0.4.0
+    files: nsPopover.js, ../../css/nsPopover.css
